syntax ="proto3";

option java_multiple_files = true;
option java_package = "userService.generated";
option java_outer_classname = "UserServiceImpl";

package userService;

service UserService{
	rpc login(LoginRequest) returns (LoginResponse){}
	rpc logout(Empty) returns (LogoutResponse){}
	
}

message LoginRequest{
	string userName = 1;
	string password = 2;
}

message LoginResponse{
	string responseMessage = 1;
	int32 responseCode = 2;
}

message LogoutRequest{
	string userName = 1;
}

message LogoutResponse{
	string responseMessage = 1;
	int32 responseCode = 2;
}

message Empty{
}
